--- a/css/style.scss
+++ b/css/style.scss
@@ -1092,7 +1092,12 @@ section{
     font-family: Nunito;
     color: #000;
     vertical-align: middle;
-
+    span{
+        font-size: 20px;
+        color: #979797;
+        display: inline-block;
+        vertical-align: middle;
+    }
 }
 
 .switch-dd{
@@ -1207,6 +1212,7 @@ section{
     width: 220px;
     height: 220px;
     margin: 0 auto;
+    overflow: hidden;
     img{
         width: 100%;
     }
@@ -1335,6 +1341,242 @@ section{
     }
 }
 }
+
+
+.prod-thumb{
+
+    img{
+        width: 100%!important;
+    }
+}
+
+
+.prod-details-wrap{
+    .product-txt-wrap{
+        text-align: left;
+
+        .rating{
+            text-align: left;
+            margin: 0;
+        }
+
+        .availabilty-txt{
+            text-align: left;
+        }
+
+        .prod-description{
+            display: block;
+        }
+    }
+
+    .owl-dots{
+        position: static;
+        margin-top: 30px!important;
+    }
+}
+
+.mt-10{
+    margin-top: 10px;
+}
+
+.prod-info-labels{
+    margin-top: 20px;
+    li{
+        margin-bottom: 10px;
+        
+        span{
+            text-transform: uppercase;
+            font-size:18px;
+            color: #414140;
+            font-weight: 700;
+            width: 150px;
+            display: inline-block;
+    
+        }
+}
+
+}
+
+
+.pr-quantity{
+
+    label{
+        font-size: 20px;
+        color: #414140;
+        display: block;
+        margin-bottom: 20px;
+    }
+.qty-num-wrap{
+    margin-bottom:20px;
+    
+    border: 1px solid #707070;
+    display: inline-block;
+
+    button,input{
+        display: inline-block;
+        text-align: center;
+        font-size: 14px;
+        width: 30px;
+        height: 30px;
+        vertical-align: middle;
+        background: none;
+        border: none;
+    }
+
+    button{
+        font-size: 22px;
+        font-weight: 700;
+        line-height: 0;
+        color: #7B7B7B;
+    }
+
+    input{
+        font-size: 16px;
+        font-weight: 700;
+        border-left: 1px solid #707070;
+        border-right: 1px solid #707070;
+        line-height: 32px;
+    }
+}
+
+}
+
+.prod-social-links{
+    border-top: 1px solid #707070;
+    border-bottom: 1px solid #707070;
+    padding:20px 0;
+    margin: 20px 0 40px;
+    color: #707070;
+    font-size: 18px;
+    overflow: hidden;
+
+    a{
+        width: 26px;
+        height: 26px;
+        display: inline-block;
+        background-repeat: no-repeat;
+        background-position: center center;
+        vertical-align: middle;
+        margin-left: 20px;
+        &.fb{
+            background-image: url(../images/icon-fb.svg);
+        }
+        &.twitter{
+            background-image: url(../images/icon-twitter.svg);
+        }
+        &.pin{
+            background-image: url(../images/icon-pin.svg);
+        }
+        &.whatsapp{
+            background-image: url(../images/icon-whatsapp.svg);
+        }
+    }
+
+
+}
+
+
+
+.prod-details-tab{
+
+    .nav-tabs{
+        font-size: 0;
+    }
+    .nav-tabs li{
+        margin-right: 0;
+    }
+    .nav-tabs li > a{
+        background: #F2F3F7;
+        font-size: 16px;
+        color: #505050;
+        padding: 15px 30px!important;
+        margin-right: 0;
+        border: 1px solid #A7A8C2;
+    }
+    .nav-tabs li.active a, .nav-tabs li.active a:hover, .nav-tabs li.active a:focus{
+        border: 1px solid transparent;
+        border-left: 1px solid #A7A8C2;
+        background: none;
+    }
+
+    .nav-tabs li.active:after{
+        bottom: auto;
+        top: -5px;
+        border-radius: 0;
+    }
+
+
+    .tab-content{
+        padding: 30px 0;
+
+        p{
+            color: #505050;
+            font-size: 16px;
+        }
+
+        .ft-list{
+
+           li{
+            font-size: 16px;
+            color: #505050;
+            position: relative;
+            padding-left: 15px;
+            margin-bottom: 10px;
+            &:before{
+                content: '-';
+                font-size: 16px;
+                color: #505050;
+                position: absolute;
+                top:0px;
+                left:0;
+                
+            }
+           }
+            
+        }
+    }
+}
+
+.panel-group .panel{
+    border-radius: 0;
+}
+
+.related-prod-wrap{
+
+    border-top: 1px dotted #000;
+    padding: 20px 0;
+
+    .r-heading{
+        font-size: 18px;
+        color: #505050;
+        font-weight: 700;
+        margin-bottom: 20px;
+    }
+
+    li{
+        height: auto;
+        margin-bottom: 0;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -2062,3 +2304,6 @@ margin-right: auto;
   .rating > input:checked ~ label:hover,
   .rating > label:hover ~ input:checked ~ label, /* lighten current selection */
   .rating > input:checked ~ label:hover ~ label { color: #FF6347;  } 
+
+
+//   RWD tabs
