--- a/css/style.scss
+++ b/css/style.scss
@@ -236,7 +236,20 @@ width: 35px;
     &:hover,&:focus{
         color: #000;
     }
-
+    span.count{
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        background: #3E3EFF;
+        border-radius: 50%;
+        color: #fff;
+        font-size: 10px;
+        text-align: center;
+        padding-top: 4px;
+        font-weight: 400;
+        left: 30px;
+        top: 5px;
+    }
 }
 /*tab styles*/
 
@@ -1560,27 +1573,221 @@ section{
 }
 
 
+.cart-popup{
+   float: right;
+
+   .dropdown-menu{
+       right: 0;
+       left: auto;
+       top:50px;
+       padding: 20px;
+       border: 1px solid #707070;
+
+     
+       .bill-amount{
+           overflow: hidden;
+           margin-bottom: 20px;
+       }
+       .total-txt{
+        font-size: 16px;
+        font-weight: 700;
+        color: #707070;
+        text-transform: uppercase;
+        float: left;
+    }
+
+    .total-amt{
+        font-size: 18px;
+        color:#707070;
+        font-weight: 700;
+        float: right;
+    }
+
+    a{
+        width: 100%;
+        text-align: center;
+    }
+
+    .view-cart-link{
+        color: #000000;
+        font-size: 16px;
+        text-decoration: underline;
+        font-weight: 700;
+        margin-top: 20px;
+        text-align: center;
+        display: block;
+    }
+   }
+}
+.cart-product{
+    overflow: hidden;
+     margin-bottom:20px;
+    .cart-image{
+        float: left;
+        width: 100px;
+        height: 100px;
+        img{
+            width: 100%;
+        }
+    }
+
+   .cart-info{
+       padding-left: 20px;
+       float: left;
+     .item-name{
+         font-size: 16px;
+         font-weight: 700;
+         color: #414140;
+     }
+
+     .c-name{
+         color: #707070;
+     }
+
+     .product-txt-wrap{
+         margin-top: 30px;
+         text-align: left;
+     }
+
+     .seperator{
+         margin: 20px 0;
+         border: none;
+         height: 1px;
+         width: 100%;
+         background: #707070;
+     }
+
+    
+   }
+
+  
 
 
+}
+
+.cart-modal{
+    .modal-content{
+        border-radius: 0;
+        position: relative;
+        .modal-body{
+            padding: 30px;
+        }
+    }
+}
+
+.modal-close{
+    background: #000;
+    display: block;
+    width: 50px;
+    height: 50px;
+    right: -20px;
+    top:-20px;
+    text-align: center;
+    padding-top: 15px;
+    position: absolute;
+    z-index: 99;
+}
+
+.prod-name{
+    color: #414140;
+    font-size: 16px;
+    margin: 20px 0;
+}
+
+.alert{
+    border-radius: 0;
+}
+.alert-success{
+
+    background-image:url(../images/tick.png);
+    background-position: 20px center;
+    background-repeat: no-repeat;
+    padding-left: 70px;
+}
 
 
+.btn-3{
+    border: 3px solid #000000;
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 10px 30px;
+    display: inline-block;
+    color: #000;
+    font-weight: 600;
+
+    &:hover,&:focus{
+        color: #000;
+    }
+}
+
+.mr-20{
+    margin-right: 20px;
+}
 
 
+.tracking-wrap{
+
+   
+    margin: 40px auto 0;
+}
+
+.phone-field{
+    border-radius: 5px;
+    border: 1px solid #26A7DE;
+    background:#F7F5F4;
+    margin: 20px 0;
+
+    
+    input{
+        padding: 10px;
+        border: none;
+        background:#F7F5F4;
+        font-size: 28px;
+       
+    }
+    .country-code{
+        display: inline-block;
+        width: 80px;
+        border-right: 1px solid #26A7DE;
+        border-radius:5px 0 0 5px;
+       
+    }
+
+    .country-phone{
+        width: 79%;
+
+        &.correct{
+
+            background-image: url(../images/tick.png);
+            background-position: 95% center;
+            background-repeat: no-repeat;
+        }
+    }
+}
+
+.invalid-error{
+
+    font-size: 16px;
+    color: #FF0000;
+    font-weight: 700;
+    background: url(../images/error-icon.png) no-repeat left center;
+    padding:10px 40px;
+    margin-bottom: 20px;
+}
+
+.full-width{
+    width: 100%;
+    text-align: center;
+}
 
 
+.track-img-wrap{
+    margin: 80px 40px;
 
-
-
-
-
-
-
-
-
-
-
-
-
+    img{
+        width: 100%;
+    }
+}
 
 
 
@@ -2030,8 +2237,7 @@ margin-right: auto;
 
 
 
-
-/* @dekstop end*/
+ 
 
 
 
@@ -2092,6 +2298,9 @@ margin-right: auto;
 }
 }
 
+.tracking-wrap{
+    width: 415px;
+}
 
 }
 
@@ -2306,4 +2515,65 @@ margin-right: auto;
   .rating > input:checked ~ label:hover ~ label { color: #FF6347;  } 
 
 
-//   RWD tabs
+//   custom radio styles
+.custom-radio{
+
+    
+[type="radio"]:checked,
+[type="radio"]:not(:checked) {
+    position: absolute;
+    left: -9999px;
+}
+[type="radio"]:checked + label,
+[type="radio"]:not(:checked) + label
+{
+    position: relative;
+    padding-left: 28px;
+    cursor: pointer;
+    line-height: 20px;
+    display: inline-block;
+    color: #000000;
+    font-weight: 400;
+    font-size: 16px;
+    margin-right: 30px;
+}
+[type="radio"]:checked + label:before,
+[type="radio"]:not(:checked) + label:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 20px;
+    height: 20px;
+    border: 1px solid #000;
+    border-radius: 100%;
+    background: #fff;
+}
+[type="radio"]:checked + label:after,
+[type="radio"]:not(:checked) + label:after {
+    content: '';
+    width: 12px;
+    height: 12px;
+    background: #000;
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    border-radius: 100%;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+[type="radio"]:not(:checked) + label:after {
+    opacity: 0;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+}
+[type="radio"]:checked + label:after {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+
+}
+
+
+ 
