--- a/css/style.scss
+++ b/css/style.scss
@@ -1791,6 +1791,109 @@ section{
 
 
 
+.school-details{
+
+    overflow: hidden;
+    .school-logo{
+        float: left;
+        margin-right: 20px;
+    }
+
+    .school-name{
+        >div{
+        font-size: 20px;
+        color: #18131D;
+        margin-bottom: 5px;
+    }
+
+    .school-code{
+        color: #F75842;
+        font-size: 16px;
+        text-align: left;
+    }
+}
+
+  
+}
+
+.settings-link{
+
+    font-size: 24px;
+    color: #000;
+    background: url(../images/profile-details.svg) no-repeat left center;
+    padding:10px 50px;
+
+    margin-bottom: 50px;
+    display: inline-block;
+}
+
+.profile-wrap{
+
+    padding: 30px 0;
+}
+
+
+.left-menu{
+
+    li{
+        margin-bottom: 20px;
+        a{
+            display: block;
+            font-size: 18px;
+            color: #000;
+            padding-left: 45px;
+            &.active{
+                font-weight: 700;
+                background: url(../images/link-arrow.png) no-repeat left center;
+
+            }
+        }
+    }
+}
+
+
+.form-group{
+
+    label{
+        font-size: 16px;
+        color: #4E4E4E; 
+        font-weight: 400;       
+    }
+
+    .form-control{
+        border: 1px solid #8D8D8D;
+    }
+    .form-control:disabled{
+        background:#F2F3F7;
+        color: #989898;
+    }
+
+    .sm{
+        font-size: 12px;
+        margin-top: 5px;
+    }
+
+    .form-control.error{
+        border: 1px solid #FF5B4A;
+        color: #FF5B4A;
+    }
+     
+}
+
+.mt-30{
+    margin-top: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{
@@ -2301,7 +2404,15 @@ margin-right: auto;
 .tracking-wrap{
     width: 415px;
 }
+.school-details{
+    padding-top: 25px;
+    float: right;
+    width: 340px;
 
+    .school-code{
+        text-align: right;
+    }
+}
 }
 
 
