--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Roboto font styles*/
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,900&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Nunito:300,400,600,700&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap");
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
@@ -585,6 +585,10 @@ section {
 .header .search-wrap .search-btn {
   top: 5px;
   right: 10px;
+}
+
+.search-list-wrap{
+  min-height: 500px;
 }
 
 .search-list-wrap .search-txt {
@@ -1837,6 +1841,97 @@ section {
   margin-bottom: 20px;
 }
 
+.formHeading span {
+  font-size: 12px;
+  padding-top: 12px;
+}
+
+.formHeading span a {
+  color: #000;
+  font-weight: 500;
+  text-decoration: underline;
+}
+
+a {
+  color: #6C63FF;
+}
+
+.address-wrap .address-heading {
+  font-size: 24px;
+  font-weight: 700;
+  color: #000;
+  margin-bottom: 20px;
+}
+
+.address-wrap address {
+  color: #000;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #707070;
+}
+
+.address-wrap address div {
+  font-size: 20px;
+  color: #000;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.address-wrap address span {
+  display: block;
+}
+
+.address-btn, .address-btn:focus, .address-btn:hover {
+  background: #707070;
+  font-size: 14px;
+  font-weight: 700;
+  color: #fff;
+  display: inline-block;
+  padding: 10px 30px;
+  border-radius: 5px;
+}
+
+.address-btn.active, .address-btn:focus.active, .address-btn:hover.active {
+  background: #6C63FF;
+}
+
+.no-border {
+  border: none !important;
+}
+
+.address-main-title {
+  font-size: 28px;
+  font-family: Nunito;
+  font-weight: 500;
+  color: #000;
+  background: url(../images/address-icon.png) no-repeat left center;
+  padding-left: 50px;
+  margin-bottom: 20px;
+}
+
+.add-txt {
+  font-size: 24px;
+  color: #6E6E6E;
+}
+
+.fz-20 {
+  font-size: 20px;
+}
+
+.mb-40 {
+  margin-bottom: 40px;
+}
+
+.parent-add-wrap {
+  margin-top: 80px;
+}
+
+.address-svg-wrap {
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
   border-radius: 10px !important;
   background: #FF5B4A !important;
@@ -2238,7 +2333,7 @@ footer .copy-right .paypal {
     width: 415px;
   }
   .school-details {
-    padding-top: 25px;
+    padding-top: 30px;
     float: right;
     width: 340px;
   }
@@ -2586,8 +2681,18 @@ footer .copy-right .paypal {
   background: white;
   width: 2px;
   height: 2px;
-  -webkit-box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white, 4px -6px 0 white, 4px -8px 0 white;
-          box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white, 4px -6px 0 white, 4px -8px 0 white;
+  -webkit-box-shadow: 2px 0 0 white,
+ 4px 0 0 white,
+ 4px -2px 0 white,
+ 4px -4px 0 white,
+ 4px -6px 0 white,
+ 4px -8px 0 white;
+          box-shadow: 2px 0 0 white,
+ 4px 0 0 white,
+ 4px -2px 0 white,
+ 4px -4px 0 white,
+ 4px -6px 0 white,
+ 4px -8px 0 white;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
 }
